lang/macro/tests/ui/fail/C-12-const-constructor.stderr
error: `const fn` is not supported for ink! functions
  --> $DIR/C-12-const-constructor.rs:10:9
   |
10 |         const fn const_constructor() -> Self {
   |         ^^^^^
